--- a/styles/main.scss
+++ b/styles/main.scss
@@ -31,6 +31,16 @@ main {
   margin: 0 auto;
   padding-top: 250px;
 
+  // .banner__logo{
+  //   background-image: url(../pictures/logo.png);
+  //   background-repeat: no-repeat;
+  //   background-position: center;
+  //   object-fit: cover;
+  //   height: 200px;
+  //   width: 200px;
+  //   padding-bottom: 50px;
+  // }
+
   .banner__heading {
     padding-bottom: 100px;
     text-align: center;
